Fix Kanji Vocab Spacing

--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -177,13 +177,16 @@ main {
   @extend %center;
   grid-area: kanji;
   justify-content: space-evenly !important;
-  padding: 2rem;
+  padding: 1rem;
   font-family: "Noto Sans JP";
   text-align: center;
   line-height: 1;
 
   h1 {
-    font-size: 4rem;
+    font-size: 3rem;
+  }
+  h2 {
+    margin-bottom: 0.5rem;
   }
   div {
     @extend %center;
